# camera_motion_extraction

./: CMakeLists.txt  README.md  TODO.txt  package.xml
src/camera_motion_extraction/: CMakeLists.txt  feature_detection.cpp  feature_extraction.cpp  feature_matching.cpp  image_subscriber.cpp  motion_extraction.cpp  test_feature_detection.cpp  test_feature_matching.cpp  test_image_subscriber.cpp  test_motion_extraction.cpp
src/camera_motion_extraction/include/: feature_detection.h  feature_matching.h  image_subscriber.h  motion_extraction.h
